; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_get_arg_type.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_get_arg_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REIL_TEMP_PREFIX = common dso_local global i32 0, align 4
@ARG_TEMP = common dso_local global i32 0, align 4
@ARG_REG = common dso_local global i32 0, align 4
@ARG_CONST = common dso_local global i32 0, align 4
@ARG_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reil_get_arg_type(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load i32, i32* @REIL_TEMP_PREFIX, align 4
  %9 = load i32, i32* @REIL_TEMP_PREFIX, align 4
  %10 = call i32 @strlen(i32 %9)
  %11 = call i32 @strncmp(i8* %7, i32 %8, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @ARG_TEMP, align 4
  store i32 %14, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @r_anal_esil_get_parm_type(i32* %16, i8* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  switch i32 %19, label %24 [
    i32 128, label %20
    i32 129, label %22
  ]

20:                                               ; preds = %15
  %21 = load i32, i32* @ARG_REG, align 4
  store i32 %21, i32* %3, align 4
  br label %26

22:                                               ; preds = %15
  %23 = load i32, i32* @ARG_CONST, align 4
  store i32 %23, i32* %3, align 4
  br label %26

24:                                               ; preds = %15
  %25 = load i32, i32* @ARG_NONE, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %22, %20, %13
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @strncmp(i8*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @r_anal_esil_get_parm_type(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
